--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "jest": "^30.0.4",
+    "jose": "^6.0.12",
     "next": "15.3.5",
-    "next-auth": "^4.24.11",
     "openid-client": "^6.6.2",
     "playwright": "^1.54.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swr": "^2.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
